fixed dark mode button hover color

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -22,7 +22,7 @@
     margin-bottom: var(--mb-2-5);
 }
 
-.about__info-title {
+.about__info__title {
     font-size: var(--h2-font-size);
     font-weight: var(--font-semi-bold);
     color: var(--title-color);
